maksim | Добавил заппрос для получения информации о профиля пользователя
