# api/swagger.yml
@@ -320,8 +320,8 @@ paths:
     get:
       tags:
         - user
-      operationId: userProfile
-      summary: Запрос на поиск информации о пользователях
+      operationId: user_profile_get
+      summary: Запрос на получение личной информации о пользователе по acces токену
       parameters:
         - name: Authorization
           in: header
@@ -329,13 +329,13 @@ paths:
           description: jwt auth
           required: true
       produces:
-      - application/json
+        - application/json
       responses:
         200:
-          description: информация о достижениях успешно получена
-          schema: 
+          description: OK
+          schema:
             type: object
-            properties:
+            properties: 
               id: 
                 type: integer
                 format: uint64
@@ -345,21 +345,27 @@ paths:
               updated_at:
                 type: string
                 format: date-time
-              role_id:
+              roleId:
                 type: integer
                 format: uint64
               email:
                 type: string
+                format: email
               login:
                 type: string
               name:
                 type: string
               surname:
                 type: string
+              password:
+                type: string
         500:
-          description: Ошибка сервера либо запроса
+          description: Ошибка сервера
           schema:
             $ref: '#/definitions/error_500'
+
+
+
 
 
   /user/achievement:
@@ -922,6 +928,56 @@ paths:
           description: Ошибка сервера
           schema:
             $ref: '#/definitions/error_500'
+
+  /get_all_users:
+    get:
+      tags:
+        - test
+      operationId: get_all_users_get
+      summary: Полуение всех пользователей
+      parameters:
+        - name: id
+          in: query
+          type: integer
+          format: uint64
+          required: false
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id: 
+                  type: integer
+                  minimum: 5
+                  format: uint64
+                created_at:
+                  type: string
+                  format: date-time
+                updated_at:
+                  type: string
+                  format: date-time
+                roleId:
+                  type: integer
+                  format: uint64
+                email:
+                  type: string
+                  format: email
+                login:
+                  type: string
+                name:
+                  type: string
+                surname:
+                  type: string
+                password:
+                  type: string
+        500:
+          description: Ошибка сервера
+          schema:
+            $ref: '#/definitions/error_500'
+
 
 # [ СХЕМЫ ]
 definitions:
